--- a/helm/sql-insight-engine/templates/infrastructure-statefulsets.yaml
+++ b/helm/sql-insight-engine/templates/infrastructure-statefulsets.yaml
@@ -101,6 +101,24 @@ spec:
           value: {{ .Values.rabbitmq.env.password }}
         resources:
           {{- toYaml .Values.rabbitmq.resources | nindent 10 }}
+        volumeMounts:
+        - name: data
+          mountPath: /var/lib/rabbitmq
+  {{- if .Values.rabbitmq.persistence.enabled }}
+  volumeClaimTemplates:
+  - metadata:
+      name: data
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: {{ .Values.global.storageClass }}
+      resources:
+        requests:
+          storage: {{ .Values.rabbitmq.persistence.size }}
+  {{- else }}
+      volumes:
+      - name: data
+        emptyDir: {}
+  {{- end }}
 ---
 apiVersion: v1
 kind: Service
