--- a/helm/sql-insight-engine/templates/external-test-db.yaml
+++ b/helm/sql-insight-engine/templates/external-test-db.yaml
@@ -1,4 +1,17 @@
 {{- if .Values.externalTestDb.enabled }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ include "sql-insight-engine.fullname" . }}-external-test-db-init
+  labels:
+    {{- include "sql-insight-engine.labels" . | nindent 4 }}
+    app.kubernetes.io/component: external-test-db
+data:
+  allow-remote.sh: |
+    #!/bin/bash
+    echo "host all all all scram-sha-256" >> "$PGDATA/pg_hba.conf"
+    pg_ctl reload -D "$PGDATA"
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -38,6 +51,8 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /var/lib/postgresql/data
+        - name: init-scripts
+          mountPath: /docker-entrypoint-initdb.d
         livenessProbe:
           exec:
             command:
@@ -54,6 +69,11 @@ spec:
             - {{ .Values.externalTestDb.env.user }}
           initialDelaySeconds: 5
           periodSeconds: 5
+      volumes:
+      - name: init-scripts
+        configMap:
+          name: {{ include "sql-insight-engine.fullname" . }}-external-test-db-init
+          defaultMode: 0755
   {{- if .Values.externalTestDb.persistence.enabled }}
   volumeClaimTemplates:
   - metadata:
@@ -64,10 +84,6 @@ spec:
       resources:
         requests:
           storage: {{ .Values.externalTestDb.persistence.size }}
-  {{- else }}
-      volumes:
-      - name: data
-        emptyDir: {}
   {{- end }}
 ---
 apiVersion: v1
