--- a/helm/sql-insight-engine/templates/api-deployment.yaml
+++ b/helm/sql-insight-engine/templates/api-deployment.yaml
@@ -18,6 +18,18 @@ spec:
         {{- include "sql-insight-engine.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/component: api
     spec:
+      dnsPolicy: "None"
+      dnsConfig:
+        nameservers:
+          - 8.8.8.8
+          - 8.8.4.4
+        searches:
+          - {{ .Release.Namespace }}.svc.cluster.local
+          - svc.cluster.local
+          - cluster.local
+        options:
+          - name: ndots
+            value: "5"
       initContainers:
       - name: wait-for-infra
         image: busybox:1.36
